--- a/client/package.json
+++ b/client/package.json
@@ -4,5 +4,11 @@
     "main": "main.js",
     "dependencies": {
         "node-machine-id": "^1.1.10"
+    },
+    "devDependencies": {
+        "electron": "^21.2.3"
+    },
+    "scripts": {
+      "start": "electron ."
     }
 }
