dep: upgrade socket to latest

--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
         "express": "latest",
         "body-parser": "latest",
         "compilex": "latest",
-        "socket.io": "^1.7.3",
+        "socket.io": "latest",
         "request": "latest"
     }
 }
